# appwright

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  dependency-lock.yml  release.yml  security.yml
docs/: api-reference.md  architecture.md  configuration.md  diagnostics.md  getting-started.md  index.md  pytest.md  quickstart.md  releasing.md  selectors.md  troubleshooting.md
docs/adr/: 0001-appium-first-backend.md  0002-canonical-async-runtime.md  0003-typed-boundaries-and-state-names.md
scripts/: check_dco.py  check_generated.py  check_no_private_state.py  generate_api.py
scripts/templates/: async_api.py.txt  sync_api.py.txt
src/appwright/: __init__.py  errors.py
src/appwright/api/: __init__.py  generator.py  specification.py
src/appwright/assertions/: __init__.py  async_assertions.py
src/appwright/async_api/: __init__.py
src/appwright/backends/: __init__.py  base.py
src/appwright/backends/appium/: __init__.py  adapter.py  models.py  service.py  worker.py
src/appwright/cli/: __init__.py  main.py
src/appwright/core/: __init__.py  devices.py  errors.py  runtime.py
src/appwright/models/: __init__.py  base.py  config.py  data.py  diagnostics.py  enums.py  project.py
src/appwright/observations/: __init__.py  engine.py  evaluator.py  models.py  parser.py
src/appwright/operations/: __init__.py  engine.py  models.py
src/appwright/pytest_plugin/: __init__.py  plugin.py
src/appwright/screens/: __init__.py  elements.py  errors.py  interruptions.py  model.py  readiness.py  recovery.py  runtime.py  sync_runtime.py  targets.py  transitions.py
src/appwright/selectors/: __init__.py  compiler.py  models.py
src/appwright/sync_api/: __init__.py
src/appwright/tracing/: __init__.py  recorder.py  redaction.py
tests/: conftest.py  fakes.py
tests/contract/: test_async_runtime.py  test_async_screen_facade.py  test_public_facades.py  test_screen_runtime.py  test_screen_transitions.py  test_sync_runtime.py  test_sync_screen_facade.py
tests/integration/android/: test_behaviors.py  test_smoke.py
tests/typing/: async_screen_facade.py  public_api.py  screens.py  sync_screen_facade.py
tests/unit/: test_appium_adapter.py  test_cli.py  test_dco.py  test_devices.py  test_errors.py  test_interruption_manager.py  test_models.py  test_observation_engine.py  test_observation_evaluator.py  test_operation_models.py  test_project_config.py  test_pytest_plugin.py  test_screen_models.py  test_screen_recovery.py  test_selectors.py  test_service.py  test_tracing.py  test_worker.py
tools/detekt-rules/: README.md  build.gradle.kts  settings.gradle.kts
tools/detekt-rules/src/main/kotlin/appwright/detekt/: AppwrightRuleSetProvider.kt  NoPrivateStateRule.kt
